Started adding content.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,161 @@
 
   </header>
   <div role="main">
+  	
+  		<!-- HTML Resources -->
+		<dl>
+			<dt>
+				HTML
+			</dt>
+			<dd>
+				Reference: 
+					<a href="http://reference.sitepoint.com/html/elements">SitePoint Reference</a>, 
+					<a href="http://dev.w3.org/html5/markup/elements.html#elements">HTML5 Elements</a>				
+			</dd>
+			<dd>
+				Code Quality: 
+					<a href="http://validator.w3.org/unicorn/">Unicorn - W3C's Unified Validator</a>
+			</dd>
+		</dl>
+		
+		<!-- JavaScript Resources -->
+		<dl>
+			<dt>
+				JavaScript
+			</dt>
+			<dd>
+				Reference: 
+					<a href="https://developer.mozilla.org/en/JavaScript">Mozilla Developer Network</a>, 
+					<a href="http://reference.sitepoint.com/javascript/domcore">DOM Core on SitePoint</a>
+			</dd>
+			<dd>
+				News: <a href="http://javascriptweekly.com/">JavaScript Weekly</a>
+			</dd>
+			<dd>
+				Code Quality: 
+					<a href="http://www.jslint.com/">JSLint</a>, 
+					<a href="http://www.jshint.com/">JSHint</a>
+			</dd>
+			<dd>
+				Web-based Tools/Editors: 
+					<a href="http://jsfiddle.net/">JSFiddle</a>, 
+					<a href="http://c9.io/">Cloud9 IDE</a>, 
+					<a href="https://chrome.google.com/webstore/detail/iieeldjdihkpoapgipfkeoddjckopgjg">SourceKit</a>, 
+					<a href="https://tinker.io/">Tinker.io</a>, 
+					<a href="http://jsconsole.com/">jsconsole</a>
+					
+			</dd>
+			<dd>
+				Minification Tools: 
+					<a href="http://closure-compiler.appspot.com/home">Google Closure Compiler</a>, 
+					<a href="http://yuilibrary.com/projects/yuicompressor/">YUI Compressor</a>
+			</dd>
+			<dd>
+				Free eBooks: 
+					<a href="http://eloquentjavascript.net/contents.html">Eloquent JavaScript</a>, 
+					<a href="http://addyosmani.com/blog/essentialjsdesignpatternsupdate1/">Essential JavaScript Design Patterns</a>
+			</dd>
+		</dl>
+		
+		<!-- CSS Resources -->
+		<dl>
+			<dt>CSS</dt>
+			<dd>
+				Reference: <a href="http://reference.sitepoint.com/css/propertyref">SitePoint Reference</a>
+			</dd>
+			<dd>
+				Code Quality: 
+					<a href="http://csslint.net/">CSS Lint</a>
+			</dd>
+			<dd>
+				Web-based Tools/Editors: 
+					<a href="http://dabblet.com/">Dabblet</a>, 
+					<a href="http://cssdesk.com/">CSSDesk</a>
+			</dd>
+			<dd>
+				Sprites: 
+					<a href="http://www.spritecow.com/">SpriteCow</a>, 
+					<a href="http://spriteme.org/">SpriteMe</a>
+			</dd>
+			<dd>
+				CSS3 Generators: 
+					<a href="http://css3please.com/">CSS3 Please</a>, 
+					<a href="http://mothereffingtextshadow.com/">Mother Effing Text Shadow</a>, 
+					<a href="http://gradients.glrzad.com/">Gradient Generator</a>, 
+					<a href="http://layerstyles.org/builder.html">Layer Styles</a>, 
+					<a href="">CSS3 Generator</a>
+			</dd>			
+		</dl>
+		
+		<!-- Browser Testing and Compatibility Resources -->
+  		<dl>
+  			<dt>Browser Testing and Performance</dt>
+  			<dd>
+  				Compatibility: 
+  					<a href="http://www.quirksmode.org/compatibility.html">Quirksmode Compatibility Master Table</a>, 
+  					<a href="http://caniuse.com/">When can I use...</a>
+  			</dd>
+  			<dd>
+  				Simulators: 
+  					<a href="http://spoon.net/browsers">Spoon.net Browser Sandbox</a>
+  					<a href="https://browserlab.adobe.com/en-us/index.html">Adobe Browser Lab</a>, 
+  					<a href="http://www.opera.com/developer/tools/mini/">Opera Mini</a>
+  			</dd>
+  			<dd>
+  				Performance Testing: 
+  					<a href="http://code.google.com/speed/page-speed/">Google Page Speed</a>, 
+  					<a href="http://developer.yahoo.com/yslow/">Yahoo YSlow</a>, 
+  					<a href="http://gtmetrix.com/">GTMetrix</a>
+  			</dd>
+  			<dd>
+  				Accessibility Testing: 
+  					<a href="http://wave.webaim.org/">Wave</a>, 
+  					<a href="http://www.standards-schmandards.com/projects/fangs/">Fangs</a>, 
+  					<a href="http://www.snook.ca/technical/colour_contrast/colour.html">Colour Contrast Checker</a>, 
+  					<a href="http://webaim.org/resources/contrastchecker/">Color Contrast Checker</a>, 
+  					<a href="http://graybit.com/main.php">Grey Scale Testing</a>, 
+  					<a href="http://www.read-able.com/">Readability Test Tool</a>, 
+  					<a href="http://www.w3.org/WAI/ER/tools/complete">Complete List of Web Accessibility Testing Tools</a>
+  			</dd>
+  		</dl>				
+		
+		<!-- Mobile -->
+		<dl>
+			<dt>Mobile</dt>
+			<dd>
+				Templates: <a href="http://html5boilerplate.com/mobile">HTML5 Mobile Boilerplate</a>
+			</dd>
+			<dd>
+				Media Queries: <a href="http://www.stuffandnonsense.co.uk/blog/about/320_and_up">320 and Up</a>
+			</dd>
+		</dl>
+		
+		<!-- Web Services -->
+		<dl>
+			<dt>Web Services</dt>
+			<dd>
+				Testing: <a href="http://hurl.it/">Hurl.it</a>
+			</dd>
+		</dl>
+		
+		<!-- Server Side -->
+		<dl>
+			<dt>Server Side</dt>
+			<dd>
+				.HTACCESS: 
+					<a href="http://www.htaccesstools.com/">.HTACCESS Tools</a>
+			</dd>
+		</dl>		
+		
+		<!-- Conferences and Presentations -->
+		<dl>
+			<dt>
+				Conferences and Presentations
+			</dt>
+			<dd>
+				<a href="http://www.slideshare.net/sxsw2010">SXSW on Slideshare</a>
+			</dd>
+		</dl>
 
   </div>
   <footer>
