--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 				Code Quality: 
 					<a href="http://validator.w3.org/unicorn/">Unicorn - W3C's Unified Validator</a>
 			</dd>
+			<dd>
+				Generators/Snippets:
+					<a href="http://placehold.it/">Placehold.it</a>
+			</dd>
 		</dl>
 		
 		<!-- JavaScript Resources -->
