Adding responsive design resources.

--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
 			<dd>
 				Media Queries: <a href="http://www.stuffandnonsense.co.uk/blog/about/320_and_up">320 and Up</a>
 			</dd>
+			<dd>
+				Responsive Design Testing: 
+					<a href="http://mattkersley.com/responsive/">MattKersley's Responsive Testing</a>, 
+					<a href="http://responsive.is/foodsense.is">Responsive.is</a>, 
+					<a href="http://www.responsinator.com/">Responsinator</a>, 
+					<a href="http://www.benjaminkeen.com/misc/bricss/">Responsive Design Test Bookmarklet</a>
+			</dd>
 		</dl>
 		
 		<!-- Web Services -->
