--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 	  			<dl>
 	  				<dt>Reference: </dt>
 	  				<dd>
-						<a href="http://reference.sitepoint.com/html/elements">SitePoint Reference</a>, 
-						<a href="http://dev.w3.org/html5/markup/elements.html#elements">HTML5 Elements</a>	  					
+						<a href="http://dochub.io/">Document Hub</a>, 
+						<a href="http://dev.w3.org/html5/markup/elements.html#elements">HTML5 Elements</a>, 
+						<a href="http://reference.sitepoint.com/html/elements">SitePoint Reference</a>
 	  				</dd>
 	  			</dl>
 	  			<dl>
