--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="js/libs/waypoints.min.js"></script>
+  <script src="js/libs/jquery.smooth-scroll.min.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/plugins.js"></script>
@@ -338,6 +339,8 @@
   			},
   			offset: '5px'
   		});
+  		
+  		navlinks.smoothScroll();
   	});
   </script>
   
